<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <include
        android:id="@+id/topBar"
        layout="@layout/include_setup_topbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setup_goal_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <LinearLayout
        android:id="@+id/optionsCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/auth_card_purple"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:id="@+id/optLoseWeight"
            style="@style/SetupGoalOption"
            android:text="@string/goal_lose_weight" />

        <TextView
            android:id="@+id/optGainWeight"
            style="@style/SetupGoalOption"
            android:text="@string/goal_gain_weight" />

        <TextView
            android:id="@+id/optMuscleGain"
            style="@style/SetupGoalOption"
            android:text="@string/goal_muscle_gain" />

        <TextView
            android:id="@+id/optShapeBody"
            style="@style/SetupGoalOption"
            android:text="@string/goal_shape_body" />

        <TextView
            android:id="@+id/optOthers"
            style="@style/SetupGoalOption"
            android:layout_marginBottom="0dp"
            android:text="@string/goal_others" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_onboarding_button"
        android:paddingHorizontal="40dp"
        android:text="@string/setup_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>